--- a/index.html
+++ b/index.html
@@ -19,27 +19,46 @@
     <input class="input" id="s8" placeholder="SUB 2"/>
     <input class="input" id="s9" placeholder="SUB 3"/>
     <input class="input" id="sn" placeholder="Student Number"/>
-    <button class="btn" onclick="clear()" >CLEAR</button>
+    <button class="btn" onclick="cl()" >CLEAR</button>
     <button class="btn1" onclick="add()" >ADD</button>
-    <input class="input" id="namee" placeholder="Student Number"/>
-    <input class="input" id="avg" placeholder="Avarage"/>
-    <input class="input" id="total" placeholder="Total"/>
-    <button class="btn3" >Genarate Final Resultl</button>
-    <h1 class="main1">1-STNO-<span id="stno" style="text-align: center;">Name</span></h1><input class="input" id="s1" placeholder="Maths"/>
-    <h1 class="main1">1-STNO-<span id="stno" style="text-align: center;">Name</span></h1><input class="input" id="s1" placeholder="Maths"/>
-    <h1 class="main1">1-STNO-<span id="stno" style="text-align: center;">Name</span></h1><input class="input" id="s1" placeholder="Maths"/>
-    <h1 class="main1">1-STNO-<span id="stno" style="text-align: center;">Name</span></h1><input class="input" id="s1" placeholder="Maths"/>
-    <h1 class="main1">1-STNO-<span id="stno" style="text-align: center;">Name</span></h1><input class="input" id="s1" placeholder="Maths"/>
-    <h1 class="main1">1-STNO-<span id="stno" style="text-align: center;">Name</span></h1><input class="input" id="s1" placeholder="Maths"/>
-    <h1 class="main1">1-STNO-<span id="stno" style="text-align: center;">Name</span></h1><input class="input" id="s1" placeholder="Maths"/>
-    <h1 class="main1">1-STNO-<span id="stno" style="text-align: center;">Name</span></h1><input class="input" id="s1" placeholder="Maths"/>
-    <h1 class="main1">1-STNO-<span id="stno" style="text-align: center;">Name</span></h1><input class="input" id="s1" placeholder="Maths"/>
-    <h1 class="main1">1-STNO-<span id="stno" style="text-align: center;">Name</span></h1><input class="input" id="s1" placeholder="Maths"/>
-    <h1 class="main1">1-STNO-<span id="stno" style="text-align: center;">Name</span></h1><input class="input" id="s1" placeholder="Maths"/>
-    <h1 class="main1">1-STNO-<span id="stno" style="text-align: center;">Name</span></h1><input class="input" id="s1" placeholder="Maths"/>
-    <h1 class="main1">1-STNO-<span id="stno" style="text-align: center;">Name</span></h1><input class="input" id="s1" placeholder="Maths"/>
-    <h1 class="main1">1-STNO-<span id="stno" style="text-align: center;">Name</span></h1><input class="input" id="s1" placeholder="Maths"/>
+    <input class="input" id="namee"  disabled="disabled" placeholder="Student Number"/>
+    <input class="input" id="avg" disabled="disabled" placeholder="Avarage"/>
+    <input class="input" id="total" disabled="disabled" placeholder="Total"/>
+  <hr class="hr">
+    <h1 class="main1">1-STNO-<span id="stno1" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r1" placeholder="Maths"/>
+    <h1 class="main1">2-STNO-<span id="stno2" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r2" placeholder="Maths"/>
+    <h1 class="main1">3-STNO-<span id="stno3" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r3" placeholder="Maths"/>
+    <h1 class="main1">4-STNO-<span id="stno4" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r4" placeholder="Maths"/>
+    <h1 class="main1">5-STNO-<span id="stno5" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r5" placeholder="Maths"/>
+    <h1 class="main1">6-STNO-<span id="stno6" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r6" placeholder="Maths"/>
+    <h1 class="main1">7-STNO-<span id="stno7" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r7" placeholder="Maths"/>
+    <h1 class="main1">8-STNO-<span id="stno8" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r8" placeholder="Maths"/>
+    <h1 class="main1">9-STNO-<span id="stno9" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r9" placeholder="Maths"/>
+    <h1 class="main1">10-STNO-<span id="stno10" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r10" placeholder="Maths"/>
+    <h1 class="main1">11-STNO-<span id="stno11" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r11" placeholder="Maths"/>
+    <h1 class="main1">12-STNO-<span id="stno12" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r12" placeholder="Maths"/>
+    <h1 class="main1">13-STNO-<span id="stno13" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r13" placeholder="Maths"/>
+    <h1 class="main1">14-STNO-<span id="stno14" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r14" placeholder="Maths"/>
 
+    <h1 class="main1">15-STNO-<span id="stno15" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r15" placeholder="Maths"/>
+    <h1 class="main1">16-STNO-<span id="stno16" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r16" placeholder="Maths"/>
+    <h1 class="main1">17-STNO-<span id="stno17" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r17" placeholder="Maths"/>
+    <h1 class="main1">18-STNO-<span id="stno18" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r18" placeholder="Maths"/>
+    <h1 class="main1">19-STNO-<span id="stno19" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r19" placeholder="Maths"/>
+    <h1 class="main1">20-STNO-<span id="stno20" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r20" placeholder="Maths"/>
+
+
+    <h1 class="main1">21-STNO-<span id="stno21" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r21" placeholder="Maths"/>
+    <h1 class="main1">22-STNO-<span id="stno22" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r22" placeholder="Maths"/>
+    <h1 class="main1">23-STNO-<span id="stno23" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r23" placeholder="Maths"/>
+    <h1 class="main1">24-STNO-<span id="stno24" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r24" placeholder="Maths"/>
+    <h1 class="main1">25-STNO-<span id="stno25" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r25" placeholder="Maths"/>
+    <h1 class="main1">26-STNO-<span id="stno26" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r26" placeholder="Maths"/>
+    <h1 class="main1">27-STNO-<span id="stno27" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r27" placeholder="Maths"/>
+    <h1 class="main1">28-STNO-<span id="stno28" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r28" placeholder="Maths"/>
+    <h1 class="main1">29-STNO-<span id="stno29" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r29" placeholder="Maths"/>
+    <h1 class="main1">30-STNO-<span id="stno30" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r30" placeholder="Maths"/>
+    <button onclick="okok()" class="btn3" >Genarate Final Resultl</button>
     </div>
     <script src="report.js"></script>
 </body>
