--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1 class="main">Smart Report</h1>
     <div class="allin">
-    <input class="input" id="s1" placeholder="Maths"/>
+    <input class="input" id="s1" type="number" placeholder="Maths"/>
     <input class="input" id="s2" placeholder="Englsih"/>
     <input class="input" id="s3" placeholder="Science"/>
     <input class="input" id="s4" placeholder="History"/>
