--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <h1 class="main">Smart Report</h1>
     <div class="allin">
     <input class="input" id="s1" type="number" placeholder="Maths"/>
-    <input class="input" id="s2" placeholder="Englsih"/>
-    <input class="input" id="s3" placeholder="Science"/>
-    <input class="input" id="s4" placeholder="History"/>
-    <input class="input" id="s5" placeholder="Sinhala"/>
-    <input class="input" id="s6" placeholder="Buddhism"/>
-    <input class="input" id="s7" placeholder="SUB 1"/>
-    <input class="input" id="s8" placeholder="SUB 2"/>
-    <input class="input" id="s9" placeholder="SUB 3"/>
-    <input class="input" id="sn" placeholder="Student Number"/>
+    <input class="input" id="s2" type="number" placeholder="Englsih"/>
+    <input class="input" id="s3" type="number" placeholder="Science"/>
+    <input class="input" id="s4" type="number" placeholder="History"/>
+    <input class="input" id="s5" type="number" placeholder="Sinhala"/>
+    <input class="input" id="s6" type="number" placeholder="Buddhism"/>
+    <input class="input" id="s7" type="number" placeholder="SUB 1"/>
+    <input class="input" id="s8" type="number" placeholder="SUB 2"/>
+    <input class="input" id="s9" type="number" placeholder="SUB 3"/>
+    <input class="input" id="sn" type="number" placeholder="Student Number"/>
     <button class="btn" onclick="cl()" >CLEAR</button>
     <button class="btn1" onclick="add()" >ADD</button>
     <input class="input" id="namee"  disabled="disabled" placeholder="Student Number"/>
