--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <h1 class="main1">29-STNO-<span id="stno29" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r29" placeholder="Maths"/>
     <h1 class="main1">30-STNO-<span id="stno30" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r30" placeholder="Maths"/>
     <button onclick="okok()" class="btn3" >Genarate Final Resultl</button>
+    <h4 class="or">2023 All Rights Reserved. Created by<span><a href="https://manethdulwan2006.github.io/manethdulwan/"> Maneth Dulwan</a></span></h4>
     </div>
     <script src="report.js"></script>
 </body>
