--- a/index.html
+++ b/index.html
@@ -58,6 +58,29 @@
     <h1 class="main1">28-STNO-<span id="stno28" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r28" placeholder="Maths"/>
     <h1 class="main1">29-STNO-<span id="stno29" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r29" placeholder="Maths"/>
     <h1 class="main1">30-STNO-<span id="stno30" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r30" placeholder="Maths"/>
+
+    <h1 class="main1">31-STNO-<span id="stno31" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r31" placeholder="Maths"/>
+    <h1 class="main1">32-STNO-<span id="stno32" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r32" placeholder="Maths"/>
+    <h1 class="main1">33-STNO-<span id="stno33" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r33" placeholder="Maths"/>
+    <h1 class="main1">34-STNO-<span id="stno34" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r34" placeholder="Maths"/>
+    <h1 class="main1">35-STNO-<span id="stno35" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r35" placeholder="Maths"/>
+    <h1 class="main1">36-STNO-<span id="stno36" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r36" placeholder="Maths"/>
+    <h1 class="main1">37-STNO-<span id="stno37" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r37" placeholder="Maths"/>
+    <h1 class="main1">38-STNO-<span id="stno38" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r38" placeholder="Maths"/>
+    <h1 class="main1">39-STNO-<span id="stno39" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r39" placeholder="Maths"/>
+    <h1 class="main1">40-STNO-<span id="stno40" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r40" placeholder="Maths"/>
+    
+    <h1 class="main1">41-STNO-<span id="stno41" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r41" placeholder="Maths"/>
+    <h1 class="main1">42-STNO-<span id="stno42" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r42" placeholder="Maths"/>
+    <h1 class="main1">43-STNO-<span id="stno43" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r43" placeholder="Maths"/>
+    <h1 class="main1">44-STNO-<span id="stno44" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r44" placeholder="Maths"/>
+    <h1 class="main1">45-STNO-<span id="stno45" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r45" placeholder="Maths"/>
+    <h1 class="main1">46-STNO-<span id="stno46" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r46" placeholder="Maths"/>
+    <h1 class="main1">47-STNO-<span id="stno47" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r47" placeholder="Maths"/>
+    <h1 class="main1">48-STNO-<span id="stno48" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r48" placeholder="Maths"/>
+    <h1 class="main1">49-STNO-<span id="stno49" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r49" placeholder="Maths"/>
+    <h1 class="main1">50-STNO-<span id="stno50" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r50" placeholder="Maths"/>
+   
     <button onclick="okok()" class="btn3" >Genarate Final Resultl</button>
     <h4 class="or">2023 All Rights Reserved. Created by<span><a href="https://manethdulwan2006.github.io/manethdulwan/"> Maneth Dulwan</a></span></h4>
     </div>
