--- a/index.html
+++ b/index.html
@@ -25,63 +25,63 @@
     <input class="input" id="avg" disabled="disabled" placeholder="Avarage"/>
     <input class="input" id="total" disabled="disabled" placeholder="Total"/>
   <hr class="hr">
-    <h1 class="main1">1-STNO-<span id="stno1" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r1" placeholder="Maths"/>
-    <h1 class="main1">2-STNO-<span id="stno2" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r2" placeholder="Maths"/>
-    <h1 class="main1">3-STNO-<span id="stno3" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r3" placeholder="Maths"/>
-    <h1 class="main1">4-STNO-<span id="stno4" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r4" placeholder="Maths"/>
-    <h1 class="main1">5-STNO-<span id="stno5" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r5" placeholder="Maths"/>
-    <h1 class="main1">6-STNO-<span id="stno6" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r6" placeholder="Maths"/>
-    <h1 class="main1">7-STNO-<span id="stno7" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r7" placeholder="Maths"/>
-    <h1 class="main1">8-STNO-<span id="stno8" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r8" placeholder="Maths"/>
-    <h1 class="main1">9-STNO-<span id="stno9" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r9" placeholder="Maths"/>
-    <h1 class="main1">10-STNO-<span id="stno10" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r10" placeholder="Maths"/>
-    <h1 class="main1">11-STNO-<span id="stno11" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r11" placeholder="Maths"/>
-    <h1 class="main1">12-STNO-<span id="stno12" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r12" placeholder="Maths"/>
-    <h1 class="main1">13-STNO-<span id="stno13" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r13" placeholder="Maths"/>
-    <h1 class="main1">14-STNO-<span id="stno14" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r14" placeholder="Maths"/>
+    <h1 class="main1">1-STNO-<span id="stno1" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r1" placeholder="Result"/>
+    <h1 class="main1">2-STNO-<span id="stno2" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r2" placeholder="Result"/>
+    <h1 class="main1">3-STNO-<span id="stno3" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r3" placeholder="Result"/>
+    <h1 class="main1">4-STNO-<span id="stno4" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r4" placeholder="Result"/>
+    <h1 class="main1">5-STNO-<span id="stno5" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r5" placeholder="Result"/>
+    <h1 class="main1">6-STNO-<span id="stno6" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r6" placeholder="Result"/>
+    <h1 class="main1">7-STNO-<span id="stno7" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r7" placeholder="Result"/>
+    <h1 class="main1">8-STNO-<span id="stno8" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r8" placeholder="Result"/>
+    <h1 class="main1">9-STNO-<span id="stno9" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r9" placeholder="Result"/>
+    <h1 class="main1">10-STNO-<span id="stno10" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r10" placeholder="Result"/>
+    <h1 class="main1">11-STNO-<span id="stno11" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r11" placeholder="Result"/>
+    <h1 class="main1">12-STNO-<span id="stno12" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r12" placeholder="Result"/>
+    <h1 class="main1">13-STNO-<span id="stno13" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r13" placeholder="Result"/>
+    <h1 class="main1">14-STNO-<span id="stno14" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r14" placeholder="Result"/>
 
-    <h1 class="main1">15-STNO-<span id="stno15" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r15" placeholder="Maths"/>
-    <h1 class="main1">16-STNO-<span id="stno16" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r16" placeholder="Maths"/>
-    <h1 class="main1">17-STNO-<span id="stno17" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r17" placeholder="Maths"/>
-    <h1 class="main1">18-STNO-<span id="stno18" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r18" placeholder="Maths"/>
-    <h1 class="main1">19-STNO-<span id="stno19" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r19" placeholder="Maths"/>
-    <h1 class="main1">20-STNO-<span id="stno20" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r20" placeholder="Maths"/>
+    <h1 class="main1">15-STNO-<span id="stno15" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r15" placeholder="Result"/>
+    <h1 class="main1">16-STNO-<span id="stno16" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r16" placeholder="Result"/>
+    <h1 class="main1">17-STNO-<span id="stno17" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r17" placeholder="Result"/>
+    <h1 class="main1">18-STNO-<span id="stno18" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r18" placeholder="Result"/>
+    <h1 class="main1">19-STNO-<span id="stno19" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r19" placeholder="Result"/>
+    <h1 class="main1">20-STNO-<span id="stno20" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r20" placeholder="Result"/>
 
 
-    <h1 class="main1">21-STNO-<span id="stno21" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r21" placeholder="Maths"/>
-    <h1 class="main1">22-STNO-<span id="stno22" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r22" placeholder="Maths"/>
-    <h1 class="main1">23-STNO-<span id="stno23" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r23" placeholder="Maths"/>
-    <h1 class="main1">24-STNO-<span id="stno24" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r24" placeholder="Maths"/>
-    <h1 class="main1">25-STNO-<span id="stno25" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r25" placeholder="Maths"/>
-    <h1 class="main1">26-STNO-<span id="stno26" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r26" placeholder="Maths"/>
-    <h1 class="main1">27-STNO-<span id="stno27" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r27" placeholder="Maths"/>
-    <h1 class="main1">28-STNO-<span id="stno28" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r28" placeholder="Maths"/>
-    <h1 class="main1">29-STNO-<span id="stno29" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r29" placeholder="Maths"/>
-    <h1 class="main1">30-STNO-<span id="stno30" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r30" placeholder="Maths"/>
+    <h1 class="main1">21-STNO-<span id="stno21" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r21" placeholder="Result"/>
+    <h1 class="main1">22-STNO-<span id="stno22" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r22" placeholder="Result"/>
+    <h1 class="main1">23-STNO-<span id="stno23" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r23" placeholder="Result"/>
+    <h1 class="main1">24-STNO-<span id="stno24" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r24" placeholder="Result"/>
+    <h1 class="main1">25-STNO-<span id="stno25" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r25" placeholder="Result"/>
+    <h1 class="main1">26-STNO-<span id="stno26" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r26" placeholder="Result"/>
+    <h1 class="main1">27-STNO-<span id="stno27" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r27" placeholder="Result"/>
+    <h1 class="main1">28-STNO-<span id="stno28" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r28" placeholder="Result"/>
+    <h1 class="main1">29-STNO-<span id="stno29" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r29" placeholder="Result"/>
+    <h1 class="main1">30-STNO-<span id="stno30" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r30" placeholder="Result"/>
 
-    <h1 class="main1">31-STNO-<span id="stno31" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r31" placeholder="Maths"/>
-    <h1 class="main1">32-STNO-<span id="stno32" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r32" placeholder="Maths"/>
-    <h1 class="main1">33-STNO-<span id="stno33" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r33" placeholder="Maths"/>
-    <h1 class="main1">34-STNO-<span id="stno34" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r34" placeholder="Maths"/>
-    <h1 class="main1">35-STNO-<span id="stno35" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r35" placeholder="Maths"/>
-    <h1 class="main1">36-STNO-<span id="stno36" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r36" placeholder="Maths"/>
-    <h1 class="main1">37-STNO-<span id="stno37" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r37" placeholder="Maths"/>
-    <h1 class="main1">38-STNO-<span id="stno38" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r38" placeholder="Maths"/>
-    <h1 class="main1">39-STNO-<span id="stno39" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r39" placeholder="Maths"/>
-    <h1 class="main1">40-STNO-<span id="stno40" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r40" placeholder="Maths"/>
+    <h1 class="main1">31-STNO-<span id="stno31" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r31" placeholder="Result"/>
+    <h1 class="main1">32-STNO-<span id="stno32" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r32" placeholder="Result"/>
+    <h1 class="main1">33-STNO-<span id="stno33" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r33" placeholder="Result"/>
+    <h1 class="main1">34-STNO-<span id="stno34" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r34" placeholder="Result"/>
+    <h1 class="main1">35-STNO-<span id="stno35" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r35" placeholder="Result"/>
+    <h1 class="main1">36-STNO-<span id="stno36" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r36" placeholder="Result"/>
+    <h1 class="main1">37-STNO-<span id="stno37" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r37" placeholder="Result"/>
+    <h1 class="main1">38-STNO-<span id="stno38" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r38" placeholder="Result"/>
+    <h1 class="main1">39-STNO-<span id="stno39" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r39" placeholder="Result"/>
+    <h1 class="main1">40-STNO-<span id="stno40" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r40" placeholder="Result"/>
     
-    <h1 class="main1">41-STNO-<span id="stno41" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r41" placeholder="Maths"/>
-    <h1 class="main1">42-STNO-<span id="stno42" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r42" placeholder="Maths"/>
-    <h1 class="main1">43-STNO-<span id="stno43" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r43" placeholder="Maths"/>
-    <h1 class="main1">44-STNO-<span id="stno44" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r44" placeholder="Maths"/>
-    <h1 class="main1">45-STNO-<span id="stno45" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r45" placeholder="Maths"/>
-    <h1 class="main1">46-STNO-<span id="stno46" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r46" placeholder="Maths"/>
-    <h1 class="main1">47-STNO-<span id="stno47" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r47" placeholder="Maths"/>
-    <h1 class="main1">48-STNO-<span id="stno48" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r48" placeholder="Maths"/>
-    <h1 class="main1">49-STNO-<span id="stno49" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r49" placeholder="Maths"/>
-    <h1 class="main1">50-STNO-<span id="stno50" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r50" placeholder="Maths"/>
+    <h1 class="main1">41-STNO-<span id="stno41" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r41" placeholder="Result"/>
+    <h1 class="main1">42-STNO-<span id="stno42" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r42" placeholder="Result"/>
+    <h1 class="main1">43-STNO-<span id="stno43" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r43" placeholder="Result"/>
+    <h1 class="main1">44-STNO-<span id="stno44" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r44" placeholder="Result"/>
+    <h1 class="main1">45-STNO-<span id="stno45" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r45" placeholder="Result"/>
+    <h1 class="main1">46-STNO-<span id="stno46" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r46" placeholder="Result"/>
+    <h1 class="main1">47-STNO-<span id="stno47" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r47" placeholder="Result"/>
+    <h1 class="main1">48-STNO-<span id="stno48" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r48" placeholder="Result"/>
+    <h1 class="main1">49-STNO-<span id="stno49" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r49" placeholder="Result"/>
+    <h1 class="main1">50-STNO-<span id="stno50" style="text-align: center;">Name</span></h1><input disabled="disabled" class="input" id="r50" placeholder="Result"/>
    
-    <button onclick="okok()" class="btn3" >Genarate Final Resultl</button>
+    <button onclick="okok()" class="btn3" >Genarate Final Result</button>
     <h4 class="or">2023 All Rights Reserved. Created by<span><a href="https://manethdulwan2006.github.io/manethdulwan/"> Maneth Dulwan</a></span></h4>
     </div>
     <script src="report.js"></script>
